--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -1,29 +1,29 @@
-1.arrive at ～
+1.arrive at ～ 达到，到达
 * The plain will arrive at 10:00 a.m.
 
-2.not a few
-* Not a fw people attended the meeting.
+2.not a few 不少，相当多
+* Not a few people attended the meeting.
 
-3.get along with ~
+3.get along with ~ 与…和睦相处
 * Do you get along with your colleagues?
 
-4.for a change
+4.for a change 为了改变一下；为了换换口味
 * On Sunday, i fix a big breakfast for a change.
 
-5.a monment
-* Just a monment,please.
+5.a moment 片刻
+* Just a moment,please.
 
-6.the other day
+6.the other day 不久前某一天；几天以前
 * I turned in my paper the other day.
 
-7.much less ~
+7.much less ~ 更不用说；何况
 * I can't speak English,much less German.
 
-8.that is to say
+8.that is to say 就是；即；换言之
 * The event was held last Sun.,that is to say May 3rd.
 
-9.give up
+9.give up 放弃；交出
 * Don't give up before you try
 
-10.change trains
+10.change trains 换乘火车
 * Do I have to change trains?
