--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -1,5 +1,5 @@
 1.arrive at ～ 达到，到达
-* The plain will arrive at 10:00 a.m.
+* The plane will arrive at 10:00 a.m.
 
 2.not a few 不少，相当多
 * Not a few people attended the meeting.
