--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -27,3 +27,33 @@
 
 10.change trains 换乘火车
 * Do I have to change trains?
+
+11.hardly ever ~ 几乎不；几乎从来不
+* My grandmother hardly ever catches colds.
+
+12.what's more 而且；更重要的是；另外
+* This dress shrank, and what's more, it faded.
+
+13.intrude on ~ 打扰；介入；干涉
+* You should not intrude on his privacy.
+
+14.look like ~ 看起来像
+* John just looks like his father.
+
+15.contrary to ~ 和…相反， 违反
+* Contrary to my expectation, I couldn't win the first prize.
+
+16.take care of ~ 照顾;
+* Who is going to take care of the goldfisth?
+
+17.for nothing 免费；徒然
+* I got this ticket for nothing.
+
+18.bursh out ~img 突然
+* We bursh out laughing
+
+19.in virtue of ~ 凭借；由于，因为
+* In virtue of her age, she could board the plane first.
+
+20.derive A from B A源于B
+* We can derive advantage from this choice.
