--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -57,3 +57,33 @@
 
 20.derive A from B A源于B
 * We can derive advantage from this choice.
+
+21.none the less 依然
+* I love him none the less for his faults.
+
+22.fall in love with ~ 爱上
+* Andy fell in love with Helen last year.
+
+23.a minute 一分钟；一会儿
+* Wait a minute.
+
+24.look back(on ~) 回顾；回忆
+* look back on the past
+
+25.leave a lot to be desired 极不完善；还有待改进
+* The results left a lot be desired
+
+26.be accustomed to ~ 习惯于
+* She is accustomed to rising early.
+
+27.the number of ~ 数目
+* We need to count the number of papers.
+
+28.at first 起先
+* At first it is difficult.
+
+29.even if ~ 即使；虽然
+* I'll go out even if it rains.
+
+30.be indifferent to ~ 对…漠不关心;不以为意
+* My classmates are indifferent to fashion.
