--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -87,3 +87,21 @@
 
 30.be indifferent to ~ 对…漠不关心;不以为意
 * My classmates are indifferent to fashion.
+
+31.as ~ please 请便
+* Do as you please.
+
+32.be keen on ~ 喜爱，渴望
+* He is keen on science.
+
+33.settle out of court 庭外和解
+* How much would I have to pay you to agree to settle out of court?
+
+34.come back 回来；记起
+* Our manager will come back later.
+
+35.at hand 在手边；即将到来
+* The sakura festival is near at hand.
+
+36.All ~ have to do is (to)... 不得不做的是
+* All you have to do is know where you are going.
