--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -105,3 +105,15 @@
 
 36.All ~ have to do is (to)... 不得不做的是
 * All you have to do is know where you are going.
+
+37.in regard to ～ 关于
+* We had many problems in regard to quality control.
+
+38.at least 至少
+* I should pay at least 500 yen for the ticket.
+
+39.be busy ~ ing 忙于做某事
+* The students are busy preparing for the examination.
+
+40.put and end to ~ 结束；终止
+* The lawyer put an end to human rights violations.
