--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -116,4 +116,4 @@
 * The students are busy preparing for the examination.
 
 40.put and end to ~ 结束；终止
-* The lawyer put an end to human rights violations.
+* The lawyer put and end to human rights violations.
