--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -115,5 +115,5 @@
 39.be busy ~ ing 忙于做某事
 * The students are busy preparing for the examination.
 
-40.put and end to ~ 结束；终止
-* The lawyer put and end to human rights violations.
+40.put an end to ~ 结束；终止
+* The lawyer put an end to human rights violations.
