--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -49,8 +49,8 @@
 17.for nothing 免费；徒然
 * I got this ticket for nothing.
 
-18.bursh out ~img 突然
-* We bursh out laughing
+18.burst out ~img 突然
+* We burst out laughing
 
 19.in virtue of ~ 凭借；由于，因为
 * In virtue of her age, she could board the plane first.
@@ -117,3 +117,6 @@
 
 40.put an end to ~ 结束；终止
 * The lawyer put an end to human rights violations.
+
+41.on time 按时；准时
+
