--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -118,5 +118,33 @@
 40.put an end to ~ 结束；终止
 * The lawyer put an end to human rights violations.
 
-41.on time 按时；准时
+41.on time 按时；准时；按时付款
+* arrive on time
+
+42.be subject to ~ 受支配；从属于
+* We are subject to the laws of our country.
+
+43.a pair of ~ 一对；一副
+* I knit a pair of socks today.
+
+44.for instance 比如
+* For instance, wo offer a gift such as cards and cups.
+
+45.put ~ into practice 实行，实施；付诸实践
+* A movie company put a plan into practice.
+
+46.convince ~ to ... 说服
+* She convinced my father to branch out on his own.
+
+47.make out ~ 理解；辨认出；说明；
+* Did you make out what he said?
+
+48.bring ~ up 抚养；养育；培养，教育
+* My parents decided to bring me up the best way they could
+
+49.So ~ 如此，这么
+* "I was born in London.""So was I."
+
+50.be used to ~ 习惯于，习惯，被用来做
+* He is used to traveling.
 
