--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -148,3 +148,10 @@
 50.be used to ~ 习惯于，习惯，被用来做
 * He is used to traveling.
 
+51.have an eye for ~ 对…有鉴别能力
+* The professor has an eye for fine art.
+
+52.what we call ~ 我们所说的
+* He is what we call a "genius."
+
+53.take ~ in 让…进入；接纳，接受
