--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -158,3 +158,22 @@
 * Don't be taken in by a smooth talker.
 
 54.urge ~ to 怂恿;激励
+* I urged John to reconsider.
+
+55.remind A of B 让A想起B
+* He reminds me of my grandfather.
+
+56.if it were not for ~ 如果不是因为
+* If it were not for the sun, we could not live at all.
+
+57.get over ~ 克服
+* get over a difficulty
+
+58.by accident 偶然；意外的
+* Penicillin was discovered almost by accident.
+
+59.try ~ on 试穿
+* Can I try the sweater on?
+
+60.before long 不久前某一天；几天以前
+* The board shall know the truth before long
