--- a/常用英语短语500组.md
+++ b/常用英语短语500组.md
@@ -177,3 +177,32 @@
 
 60.before long 不久前某一天；几天以前
 * The board shall know the truth before long
+
+61.make ~ up 补足；编造；组成
+* The politician make the whole things up.
+
+62.at the same time 同时
+* They came at the same time
+
+63.if any 如果有的话
+* Read the report and correct the mistakes,if any.
+
+64.all at once 突然
+* All at once, she decided to go home.
+
+65.what A call B 这就是A所说的B
+* This is what you call a stereotype.
+
+66.so ~ (that) ~ 因此
+* The wind was so strong that the door opened.
+
+67.distract A from B 分散A对B
+* The prince distracted public attention from the issue.
+
+68.to the north of ~ 在北部
+
+69.as well 也是
+* She is a good shopper and a good hargainer as well
+
+70.devote A to B
+* The Player devoted all his energy to basketball.
